IGNITE-16688 Extract RocksDB snapshots into a separate class